--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "multer": "^1.4.5-lts.1",
     "adm-zip": "^0.5.10",
     "cors": "^2.8.5",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "https": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
